src/test/ui/issues/issue-23080.stderr
error[E0380]: auto traits cannot have methods or associated items
  --> $DIR/issue-23080.rs:3:1
   |
LL | / unsafe auto trait Trait {
LL | |
LL | |     fn method(&self) {
LL | |         println!("Hello");
LL | |     }
LL | | }
   | |_^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0380`.
